fix search and layout issue for IE 11 and Edge

--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -11,11 +11,13 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  -ms-flex: 1 0 auto;
 }
 
 .content {
   position: relative;
   flex: 1;
+  -ms-flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,4 +25,8 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+}
+
+body{
+  display: flex;
 }
